src/jsc/bindings/libuv/uv.h

typedef enum {
    UV_UNKNOWN_HANDLE = 0,
#define XX(uc, lc) UV_##uc,
    UV_HANDLE_TYPE_MAP(XX)
#undef XX
        UV_FILE,
    UV_HANDLE_TYPE_MAX
} uv_handle_type;
typedef enum {
    UV_UNKNOWN_REQ = 0,
#define XX(uc, lc) UV_##uc,
    UV_REQ_TYPE_MAP(XX)
#undef XX
        UV_REQ_TYPE_PRIVATE
            UV_REQ_TYPE_MAX
} uv_req_type;
/* Handle types. */
typedef struct uv_loop_s uv_loop_t;
typedef struct uv_handle_s uv_handle_t;
typedef struct uv_stream_s uv_stream_t;
typedef struct uv_pipe_s uv_pipe_t;
typedef struct uv_timer_s uv_timer_t;
typedef struct uv_fs_s uv_fs_t;
UV_EXTERN uv_loop_t* uv_default_loop(void);
UV_EXTERN void uv_ref(uv_handle_t*);
UV_EXTERN void uv_unref(uv_handle_t*);
UV_EXTERN void uv_update_time(uv_loop_t*);
typedef void (*uv_connection_cb)(uv_stream_t* server, int status);
typedef void (*uv_close_cb)(uv_handle_t* handle);
typedef void (*uv_timer_cb)(uv_timer_t* handle);
typedef void (*uv_fs_cb)(uv_fs_t* req);
/* The abstract base class of all handles. */
struct uv_handle_s {
    UV_HANDLE_FIELDS
};
UV_EXTERN uv_loop_t* uv_handle_get_loop(const uv_handle_t* handle);
UV_EXTERN void uv_close(uv_handle_t* handle, uv_close_cb close_cb);
/*
 * uv_stream_t is a subclass of uv_handle_t.
 *
 * uv_stream is an abstract class.
 *
 * uv_stream_t is the parent class of uv_tcp_t, uv_pipe_t and uv_tty_t.
 */
struct uv_stream_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
};
UV_EXTERN int uv_listen(uv_stream_t* stream, int backlog, uv_connection_cb cb);
UV_EXTERN int uv_accept(uv_stream_t* server, uv_stream_t* client);
UV_EXTERN int uv_is_closing(const uv_handle_t* handle);
UV_EXTERN uv_handle_type uv_guess_handle(uv_file file);
enum {
    UV_PIPE_NO_TRUNCATE = 1u << 0
};
/*
 * uv_pipe_t is a subclass of uv_stream_t.
 *
 * Representing a pipe stream or pipe server. On Windows this is a Named
 * Pipe. On Unix this is a Unix domain socket.
 */
struct uv_pipe_s {
    UV_HANDLE_FIELDS
    UV_STREAM_FIELDS
    int ipc; /* non-zero if this pipe is used for passing handles */
    UV_PIPE_PRIVATE_FIELDS
};
UV_EXTERN int uv_pipe_init(uv_loop_t*, uv_pipe_t* handle, int ipc);
UV_EXTERN int uv_pipe_bind2(uv_pipe_t* handle,
    const char* name,
    size_t namelen,
    unsigned int flags);
/*
 * uv_timer_t is a subclass of uv_handle_t.
 *
 * Used to get woken up at a specified time in the future.
 */
struct uv_timer_s {
    UV_HANDLE_FIELDS
    UV_TIMER_PRIVATE_FIELDS
};
UV_EXTERN int uv_timer_init(uv_loop_t*, uv_timer_t* handle);
UV_EXTERN int uv_timer_start(uv_timer_t* handle,
    uv_timer_cb cb,
    uint64_t timeout,
    uint64_t repeat);
UV_EXTERN int uv_timer_stop(uv_timer_t* handle);
UV_EXTERN void uv_fs_req_cleanup(uv_fs_t* req);
UV_EXTERN int uv_fs_close(uv_loop_t* loop,
    uv_fs_t* req,
    uv_file file,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_open(uv_loop_t* loop,
    uv_fs_t* req,
    const char* path,
    int flags,
    int mode,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_read(uv_loop_t* loop,
    uv_fs_t* req,
    uv_file file,
    const uv_buf_t bufs[],
    unsigned int nbufs,
    int64_t offset,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_write(uv_loop_t* loop,
    uv_fs_t* req,
    uv_file file,
    const uv_buf_t bufs[],
    unsigned int nbufs,
    int64_t offset,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_mkdtemp(uv_loop_t* loop,
    uv_fs_t* req,
    const char* tpl,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_utime(uv_loop_t* loop,
    uv_fs_t* req,
    const char* path,
    double atime,
    double mtime,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_futime(uv_loop_t* loop,
    uv_fs_t* req,
    uv_file file,
    double atime,
    double mtime,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_lutime(uv_loop_t* loop,
    uv_fs_t* req,
    const char* path,
    double atime,
    double mtime,
    uv_fs_cb cb);
/*
 * This flag can be used with uv_fs_symlink() on Windows to specify whether
 * path argument points to a directory.
 */
#define UV_FS_SYMLINK_DIR 0x0001
/*
 * This flag can be used with uv_fs_symlink() on Windows to specify whether
 * the symlink is to be created using junction points.
 */
#define UV_FS_SYMLINK_JUNCTION 0x0002
UV_EXTERN int uv_fs_realpath(uv_loop_t* loop,
    uv_fs_t* req,
    const char* path,
    uv_fs_cb cb);
UV_EXTERN int uv_fs_statfs(uv_loop_t* loop,
    uv_fs_t* req,
    const char* path,
    uv_fs_cb cb);
UV_EXTERN void uv_once(uv_once_t* guard, void (*callback)(void));
struct uv_loop_s {
    /* User data - use this for whatever. */
    void* data;
    /* Loop reference counting. */
    unsigned int active_handles;
    struct uv__queue handle_queue;
    union {
        void* unused;
        unsigned int count;
    } active_reqs;
    /* Internal storage for future extensions. */
    void* internal_fields;
    /* Internal flag to signal loop stop. */
    unsigned int stop_flag;
    UV_LOOP_PRIVATE_FIELDS
};