src/libuv_sys/libuv.rs


#[repr(transparent)]
#[derive(Clone, Copy, PartialEq, Eq)]
pub struct ReturnCodeI64(pub i64);
impl ReturnCodeI64 {
    #[inline] pub fn int(self) -> i64 { self.0 }
    #[inline] pub fn errno(self) -> Option<u16> {
        if self.0 < 0 { Some((-self.0) as u16) } else { None }
    }
}

// ──────────────────────────────────────────────────────────────────────────
// `O` — libuv `UV_FS_O_*` flag namespace + `from_bun_o` translation
// (libuv.zig:170-228). The `bun.O.*` POSIX-like values are passed in by the
// caller as a raw `i32` (per `bun_sys::O` on Windows); this fn maps them to
// libuv's MSVC `_O_*` values that `uv_fs_open` expects.
// ──────────────────────────────────────────────────────────────────────────
pub mod O {
    // UV_FS_O_* (Windows / MSVC `_O_*`).
    pub const APPEND: i32 = 0x0008;
    pub const CREAT: i32 = 0x0100;
    pub const EXCL: i32 = 0x0400;
    pub const FILEMAP: i32 = 0x2000_0000;
    pub const RANDOM: i32 = 0x0010;
    pub const RDONLY: i32 = 0x0000;
    pub const RDWR: i32 = 0x0002;
    pub const SEQUENTIAL: i32 = 0x0020;
    pub const SHORT_LIVED: i32 = 0x1000;
    pub const TEMPORARY: i32 = 0x0040;
    pub const TRUNC: i32 = 0x0200;
    pub const WRONLY: i32 = 0x0001;
    pub const DIRECT: i32 = 0x0200_0000;
    pub const DSYNC: i32 = 0x0400_0000;
    pub const SYNC: i32 = 0x0800_0000;
    // No-ops on Windows.
    pub const DIRECTORY: i32 = 0;
    pub const EXLOCK: i32 = 0;
    pub const NOATIME: i32 = 0;
    pub const NOCTTY: i32 = 0;
    pub const NOFOLLOW: i32 = 0;
    pub const NONBLOCK: i32 = 0;
    pub const SYMLINK: i32 = 0;

    // `bun.O.*` — POSIX-shaped flag values Bun normalises to internally
    // (matches `bun_sys::O` on Windows; mirrored here so this crate stays
    // leaf). libuv.zig pulls these from `bun.O`; the constants are stable.
    mod bun_o {
        pub const WRONLY: i32 = 0o1;
        pub const RDWR: i32 = 0o2;
        pub const CREAT: i32 = 0o100;
        pub const EXCL: i32 = 0o200;
        pub const NOCTTY: i32 = 0o400;
        pub const TRUNC: i32 = 0o1000;
        pub const APPEND: i32 = 0o2000;
        pub const NONBLOCK: i32 = 0o4000;
        pub const DSYNC: i32 = 0o10000;
        pub const DIRECT: i32 = 0o40000;
        pub const NOFOLLOW: i32 = 0o400000;
        pub const SYNC: i32 = 0o4010000;
    }

    /// Convert from internal `bun.O` flags to libuv/Windows flags.
    pub fn from_bun_o(c_flags: i32) -> i32 {
        let mut flags: i32 = 0;
        if c_flags & bun_o::WRONLY != 0 { flags |= WRONLY; }
        if c_flags & bun_o::RDWR != 0 { flags |= RDWR; }
        if c_flags & bun_o::CREAT != 0 { flags |= CREAT; }
        if c_flags & bun_o::EXCL != 0 { flags |= EXCL; }
        if c_flags & bun_o::TRUNC != 0 { flags |= TRUNC; }
        if c_flags & bun_o::APPEND != 0 { flags |= APPEND; }
        if c_flags & bun_o::NONBLOCK != 0 { flags |= NONBLOCK; }
        // SYNC and DSYNC must be mutually exclusive for libuv on Windows.
        // `bun.O.SYNC` (0o4010000) is a superset of `DSYNC` (0o10000), so check
        // SYNC first to emit only `UV_FS_O_SYNC` when both bits are present.
        if c_flags & bun_o::SYNC == bun_o::SYNC {
            flags |= SYNC;
        } else if c_flags & bun_o::DSYNC != 0 {
            flags |= DSYNC;
        }
        if c_flags & bun_o::NOFOLLOW != 0 { flags |= NOFOLLOW; }
        if c_flags & bun_o::DIRECT != 0 { flags |= DIRECT; }
        if c_flags & FILEMAP != 0 { flags |= FILEMAP; }
        flags
    }
}

// ──────────────────────────────────────────────────────────────────────────
// extern fns — minimal set with Rust callers.
// ──────────────────────────────────────────────────────────────────────────
unsafe extern "C" {
    pub fn uv_default_loop() -> *mut Loop;
    pub fn uv_fs_req_cleanup(req: *mut fs_t);
    pub fn uv_fs_close(loop_: *mut uv_loop_t, req: *mut fs_t, file: uv_file, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_open(loop_: *mut uv_loop_t, req: *mut fs_t, path: *const c_char, flags: c_int, mode: c_int, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_read(loop_: *mut uv_loop_t, req: *mut fs_t, file: uv_file, bufs: *const uv_buf_t, nbufs: c_uint, offset: i64, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_write(loop_: *mut uv_loop_t, req: *mut fs_t, file: uv_file, bufs: *const uv_buf_t, nbufs: c_uint, offset: i64, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_statfs(loop_: *mut uv_loop_t, req: *mut fs_t, path: *const c_char, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_futime(loop_: *mut uv_loop_t, req: *mut fs_t, file: uv_file, atime: f64, mtime: f64, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_utime(loop_: *mut uv_loop_t, req: *mut fs_t, path: *const c_char, atime: f64, mtime: f64, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_lutime(loop_: *mut uv_loop_t, req: *mut fs_t, path: *const c_char, atime: f64, mtime: f64, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_mkdtemp(loop_: *mut uv_loop_t, req: *mut fs_t, tpl: *const c_char, cb: uv_fs_cb) -> ReturnCode;
    pub fn uv_fs_realpath(loop_: *mut uv_loop_t, req: *mut fs_t, path: *const c_char, cb: uv_fs_cb) -> ReturnCode;
}

pub const UV_FS_SYMLINK_DIR: c_int = 0x0001;
pub const UV_FS_SYMLINK_JUNCTION: c_int = 0x0002;

// ──────────────────────────────────────────────────────────────────────────
// Handle / stream / pipe surface (libuv.zig:391-1495 subset).
//
// Layouts here are ported field-for-field from the Zig `extern struct`s only
// where the Rust callers touch a field directly (`.data`). Everything past
// `data` is an opaque tail sized to >= the C `sizeof`. libuv only writes
// within `sizeof(uv_<kind>_t)` of the pointer it is handed, so over-allocation
// is safe; we never read those bytes from Rust.
// ──────────────────────────────────────────────────────────────────────────

pub type uv_os_fd_t = HANDLE;

/// `Handle.Type` (libuv.zig:414). `#[repr(C)]` — value comes back from
/// `uv_guess_handle` so the discriminant must match `uv_handle_type`.
#[repr(C)]
#[derive(Copy, Clone, PartialEq, Eq, Debug, strum::IntoStaticStr)]
pub enum HandleType {
    Unknown = 0,
    Async = 1,
    Check = 2,
    FsEvent = 3,
    FsPoll = 4,
    Handle = 5,
    Idle = 6,
    NamedPipe = 7,
    Poll = 8,
    Prepare = 9,
    Process = 10,
    Stream = 11,
    Tcp = 12,
    Timer = 13,
    Tty = 14,
    Udp = 15,
    Signal = 16,
    File = 17,
}
pub type uv_handle_type = HandleType;
/// `bun_sys::isatty` compares against this constant on Windows.
pub const UV_TTY: HandleType = HandleType::Tty;

pub type uv_close_cb = Option<unsafe extern "C" fn(*mut uv_handle_t)>;
pub type uv_connection_cb = Option<unsafe extern "C" fn(*mut uv_stream_t, ReturnCode)>;

/// `uv_handle_t` — every libuv handle begins with this header. Only `data` is
/// touched from Rust; the tail is opaque storage written by libuv.
#[repr(C)]
pub struct Handle {
    pub data: *mut c_void,
    _opaque: [*mut c_void; 11], // loop, type+pad, close_cb, queue[2], u[4], endgame_next, flags+pad
}
pub type uv_handle_t = Handle;

/// `uv_stream_t` — opaque; first field is `uv_handle_t` so a `*mut Pipe` /
/// `*mut Handle` cast to `*mut uv_stream_t` is valid for `data`.
#[repr(C)]
pub struct uv_stream_t {
    pub data: *mut c_void,
    _opaque: [u8; 0],
}

/// `uv_pipe_t` (libuv.zig:1374). `data` is the only Rust-touched field. Tail
/// is sized to cover Windows x64 `sizeof(uv_pipe_t)`; over-allocation is
/// harmless because the struct is always either heap-boxed (`Box<Pipe>`) or
/// the trailing field of a heap-boxed owner (`WindowsNamedPipeListeningContext`).
//
// PERF(port): replace with full field-accurate layout once the bindgen sweep
// lands; the conservative tail here trades a few hundred bytes per pipe for
// not hand-maintaining 18 nested `extern union`s.
#[repr(C)]
pub struct Pipe {
    pub data: *mut c_void,
    pub loop_: *mut uv_loop_t,
    // Everything past `loop_` is libuv-internal. 80 ptr-words ≈ 640 bytes on
    // x64, comfortably >= `sizeof(uv_pipe_t)` (Windows x64 measures ~576).
    _opaque: [*mut c_void; 80],
}

pub const UV_PIPE_NO_TRUNCATE: c_uint = 1;

unsafe extern "C" {
    pub fn uv_guess_handle(file: uv_file) -> uv_handle_type;
    pub fn uv_close(handle: *mut uv_handle_t, close_cb: uv_close_cb);
    pub fn uv_is_closing(handle: *const uv_handle_t) -> c_int;
    pub fn uv_listen(stream: *mut uv_stream_t, backlog: c_int, cb: uv_connection_cb) -> ReturnCode;
    pub fn uv_accept(server: *mut uv_stream_t, client: *mut uv_stream_t) -> ReturnCode;
    pub fn uv_pipe_init(loop_: *mut uv_loop_t, handle: *mut Pipe, ipc: c_int) -> ReturnCode;
    pub fn uv_pipe_bind2(handle: *mut Pipe, name: *const u8, namelen: usize, flags: c_uint) -> ReturnCode;

    pub fn uv_ref(handle: *mut uv_handle_t);
    pub fn uv_unref(handle: *mut uv_handle_t);
    pub fn uv_update_time(loop_: *mut uv_loop_t);
    pub fn uv_handle_get_loop(handle: *const uv_handle_t) -> *mut uv_loop_t;

    pub fn uv_timer_init(loop_: *mut uv_loop_t, handle: *mut Timer) -> c_int;
    pub fn uv_timer_start(handle: *mut Timer, cb: uv_timer_cb, timeout: u64, repeat: u64) -> c_int;
    pub fn uv_timer_stop(handle: *mut Timer) -> c_int;
}

/// `uv_timer_cb` (libuv.zig:1255).
pub type uv_timer_cb = Option<unsafe extern "C" fn(*mut Timer)>;

/// `uv_timer_t` (libuv.zig:1256). Only `data` is touched from Rust; the tail
/// is opaque storage written by libuv. Conservative tail sizing follows the
/// `Pipe`/`Handle` pattern above — `sizeof(uv_timer_t)` on Windows x64 is
/// ~160 bytes (`uv_handle_t` header ≈ 96 + 3 ptrs + int + 3×u64 + cb ≈ 64);
/// 32 ptr-words = 256 bytes comfortably covers it. Instances are always
/// heap-boxed (`Box<Timer>`), so over-allocation is harmless.
#[repr(C)]
pub struct Timer {
    pub data: *mut c_void,
    _opaque: [*mut c_void; 32],
}

impl Timer {
    /// `Timer.init` (libuv.zig:1272).
    pub fn init(&mut self, loop_: *mut uv_loop_t) {
        // SAFETY: `self` is a valid `uv_timer_t`-sized allocation; `loop_` is a
        // live `uv_loop_t` (caller contract).
        if unsafe { uv_timer_init(loop_, self) } != 0 {
            panic!("internal error: uv_timer_init failed");
        }
    }

    /// `Timer.start` (libuv.zig:1278).
    pub fn start(&mut self, timeout: u64, repeat: u64, callback: uv_timer_cb) {
        // SAFETY: `self` was `uv_timer_init`ed (caller contract).
        if unsafe { uv_timer_start(self, callback, timeout, repeat) } != 0 {
            panic!("internal error: uv_timer_start failed");
        }
    }

    /// `Timer.stop` (libuv.zig:1284).
    pub fn stop(&mut self) {
        // SAFETY: `self` was `uv_timer_init`ed (caller contract).
        if unsafe { uv_timer_stop(self) } != 0 {
            panic!("internal error: uv_timer_stop failed");
        }
    }

    /// `Timer.ref` (libuv.zig:1294). Named `ref_` because `ref` is a Rust keyword.
    #[inline]
    pub fn ref_(&mut self) {
        // SAFETY: `Timer` embeds `uv_handle_t` at offset 0.
        unsafe { uv_ref((self as *mut Timer).cast()) }
    }

    /// `Timer.unref` (libuv.zig:1290).
    #[inline]
    pub fn unref(&mut self) {
        // SAFETY: `Timer` embeds `uv_handle_t` at offset 0.
        unsafe { uv_unref((self as *mut Timer).cast()) }
    }
}

impl ReturnCode {
    /// Zig `ReturnCode.zero` enum variant — keep the lowercase fn for callers
    /// that ported `== uv.ReturnCode.zero` literally.
    #[inline]
    pub const fn zero() -> ReturnCode { ReturnCode(0) }
    #[inline]
    pub fn from_raw(v: c_int) -> ReturnCode { ReturnCode(v) }
}

impl Pipe {
    /// `uv_pipe_init` (libuv.zig:1419). Returns the raw `ReturnCode`; callers
    /// in higher tiers map to `bun_sys::Result` themselves so this crate stays
    /// free of `bun_sys`.
    pub fn init(&mut self, loop_: *mut uv_loop_t, ipc: bool) -> ReturnCode {
        // SAFETY: `self` is a valid `uv_pipe_t`-sized allocation; `loop_` is the
        // process libuv loop.
        unsafe { uv_pipe_init(loop_, self, if ipc { 1 } else { 0 }) }
    }
